--- a/media/css/style.css
+++ b/media/css/style.css
@@ -43,7 +43,7 @@ nav a{display:block;padding:.7em 1em;color:#000000;}
 nav a:hover{background-color:#ff0000;text-decoration:none;color:#f9f9f9;-webkit-transition:color .2s linear;}
 .post{padding:.5em 0em;}
 h1{color: #800;font-family: "STFangsong","Fangsong";text-rendering: optimizelegibility;font-size: 1.4em;font-weight: normal;}
-h2{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.4em;color:#111;}
+h2{color: #800;font-family: "STFangsong","Fangsong";text-rendering: optimizelegibility;font-size: 1.4em;font-weight: normal;}
 h3{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.2em;color:#222;}
 h4{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1em;color:#333;}
 pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:13px;}
