--- a/media/css/style.css
+++ b/media/css/style.css
@@ -32,7 +32,7 @@ blockquote p{margin:0;padding:.5em 0;}
 #tag_cloud{margin-bottom: 1em;}
 #tag_cloud a:hover{color:#333333 !important;text-decoration:none;}
 .listing-item,.listing-seperator{list-style-type:none;}
-.listing-item a{margin:.2em 1em;}
+.listing-item a{margin:.2em 1em;padding-bottom: 0.2em;}
 .listing-item time{color:#999999;}
 .listing-seperator{font-weight:bold;}
 .meta{text-align:right;font-size:12px;}
